crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_node_shows_open_location.txt
(call
    (identifier)
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:1
  |
1 |   (call
  |   ^ node started here
  |  _|
  | |
2 | |     (identifier)
  | |________________^
  |
help: add `)` to close the node
